@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: VTKTestWrite.cxx,v $
   Language:  C++
-  Date:      $Date: 2005/01/20 16:31:42 $
-  Version:   $Revision: 1.5 $
+  Date:      $Date: 2005/01/25 11:25:32 $
+  Version:   $Revision: 1.6 $
 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -37,8 +37,7 @@
 
 int VTKWriteTest(vtkTesting *t,vtkImageViewer *viewer,
                  std::string const & filename, 
-                 std::string const & referenceFileName,
-                 bool show )
+                 std::string const & referenceFileName)
 {
    int retVal = 0;  //by default this is an error
 
@@ -74,7 +73,7 @@ int VTKWriteTest(vtkTesting *t,vtkImageViewer *viewer,
    reader->GetOutput()->GetDimensions( dim );
 
    // Show
-   if( show )
+   if( viewer )
    {
       viewer->SetInput ( reader->GetOutput() );
 
@@ -212,7 +211,7 @@ int VTKTestWrite(int argc, char *argv[])
    }
    else
    {
-      ret = VTKWriteTest(t,viewer,argv[1+show],argv[2+show],show);
+      ret = VTKWriteTest(t,viewer,argv[1+show],argv[2+show]);
       t->Delete();
       if( viewer )
          viewer->Delete();
@@ -238,7 +237,7 @@ int VTKTestWrite(int argc, char *argv[])
       pngfile.insert( 0, "Baseline/");
       //std::cerr << "PNG file: " << pngfile << std::endl;
 
-      ret += VTKWriteTest(t,viewer,filename,pngfile,show);
+      ret += VTKWriteTest(t,viewer,filename,pngfile);
    }
    t->Delete();
    if( viewer )
