@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmDocument.cxx,v $
   Language:  C++
-  Date:      $Date: 2005/01/25 11:11:58 $
-  Version:   $Revision: 1.208 $
+  Date:      $Date: 2005/01/25 11:25:33 $
+  Version:   $Revision: 1.209 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -2895,7 +2895,6 @@ bool Document::operator<(Document &document)
    }
    return false;
 }
-
 
 /**
  * \brief   Re-computes the length of a ACR-NEMA/Dicom group from a DcmHeader
